implemented XmlNetworkManager and part of VkProductCreator + some other changes